plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'project'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-jdbc'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'mysql:mysql-connector-java:8.0.33'
   compileOnly 'org.projectlombok:lombok'
//   runtimeOnly 'com.h2database:h2'
   annotationProcessor 'org.projectlombok:lombok'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    
    
    //Jwt
    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-gson
    implementation group: 'io.jsonwebtoken', name: 'jjwt-gson', version: '0.11.5'
   
    //spring boot security
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.2.4'
   
   
    //oauth2
    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client
    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '6.3.1'
   
   	// WebClient 사용을 위한 WebFlux 의존성
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    
	//Jackson XML 모듈 의존성 추가
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'

	
    

   
}
tasks.named('test') {
	useJUnitPlatform()
}
